--- a/source/commons/Layout/styles.m.css
+++ b/source/commons/Layout/styles.m.css
@@ -30,7 +30,7 @@
     padding: 0;
     width: 100%;
     position: fixed;
-    z-index: 100;
+    z-index: 120;
 }
 
 .pure {
